// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "repr/src/catalog_item_id.proto";
import "storage-types/src/connections/aws.proto";

package mz_storage_types.oneshot_sources;

message ProtoOneshotIngestionRequest {
    oneof source {
        ProtoHttpContentSource http = 1;
        ProtoAwsS3Source aws_s3 = 4;
    }

    oneof format {
        ProtoCsvContentFormat csv = 2;
        ProtoParquetContentFormat parquet = 3;
    }
}

message ProtoHttpContentSource {
    string url = 1;
}

message ProtoAwsS3Source {
    mz_storage_types.connections.aws.ProtoAwsConnection connection = 1;
    mz_repr.catalog_item_id.ProtoCatalogItemId id = 2;
    string bucket = 3;
}

message ProtoCsvContentFormat {}

message ProtoParquetContentFormat {}
